[package]
name = "gloo_solana"
version = "0.1.0"
edition = "2021"
description = "WASM-compatible Solana SDK rewrite using gloo_net"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/gloo_solana"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
gloo-net = { version = "0.6", features = ["http"] }
gloo-utils = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
] }

# Async and utilities
futures = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["wasm-bindgen"] }

# Cryptography
base64 = "0.21"
bs58 = "0.5"
sha2 = "0.10"

# Optional Dioxus integration
dioxus = { version = "0.6", optional = true }

# Example dependencies
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
console_log = "1.0"

[features]
default = []
dioxus = ["dep:dioxus"]

[[example]]
name = "hello_surfpool"
path = "examples/hello_surfpool/src/main.rs"

[[example]]
name = "hello_surfpool_demo"
path = "examples/hello_surfpool_demo.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
