[package]
name = "gloo_solana"
version = "0.1.0"
edition = "2021"
description = "WASM-compatible Solana SDK rewrite using gloo_net"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/gloo_solana"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
gloo-net = { version = "0.6", features = ["http"] }
gloo-utils = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# WASM dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Headers",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
  "console",
] }

# Async and utilities
futures = "0.3"
thiserror = "1.0"

# Native HTTP client
reqwest = { version = "0.11", features = ["json"], optional = true }
uuid = { version = "1.0", features = ["wasm-bindgen"] }

# Cryptography
base64 = "0.21"
bs58 = "0.5"
sha2 = "0.10"

# Optional Dioxus integration
dioxus = { version = "0.6", features = ["desktop", "web"], optional = true }
dioxus-web = { version = "0.6", optional = true }
gloo-timers = { version = "0.3", optional = true }

# Example dependencies
tokio = { version = "1.0", features = ["full"] }
console_log = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
toml = "0.8"
anyhow = "1.0"


[dev-dependencies]
wasm-bindgen-test = "0.3"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
console_log = "1.0"

# Optional features
[features]
default = ["reqwest"]
dioxus = ["dep:dioxus", "dep:dioxus-web", "dep:wasm-bindgen-futures", "dep:gloo-timers"]
web = ["dioxus"]
desktop = ["dioxus", "reqwest"]
native = ["reqwest"]

[[example]]
name = "hello_surfpool"
path = "examples/hello_surfpool/src/main.rs"

[[example]]
name = "hello_surfpool_demo"
path = "examples/hello_surfpool_demo.rs"

[[example]]
name = "program_deployment"
path = "examples/program_deployment/src/main.rs"

[[example]]
name = "program_deployment_demo"
path = "examples/program_deployment_demo.rs"

[[example]]
name = "surfpool_auto_deploy"
path = "examples/surfpool_auto_deploy/src/main.rs"

[[example]]
name = "dioxus_app"
path = "examples/gloo_solana_dioxus_app/src/main.rs"
required-features = ["dioxus"]



[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
