[package]
name = "program_deployment"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "program_deployment"
path = "src/main.rs"

[dependencies]
gloo_solana = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
bs58 = "0.5"
base64 = "0.21"
sha2 = "0.10"
