[package]
name = "surfpool_auto_deploy"
version = "0.1.0"
edition = "2021"
description = "Automatic surfpool deployment with Anchor.toml integration"

[[bin]]
name = "surfpool_deploy"
path = "src/main.rs"

[dependencies]
gloo_solana = { path = "../../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
bs58 = "0.5"
base64 = "0.21"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

[profile.release]
overflow-checks = true
